--- a/Apps/Device Sequencer/packageManifest.json
+++ b/Apps/Device Sequencer/packageManifest.json
@@ -8,7 +8,7 @@
 	"apps" : [
 		{
 			"id" : "addb4010-1e41-4fd2-a84f-e9d9de86e514",
-			"name": "Device Sequencer Parent",
+			"name": "Device Sequencer",
 			"namespace": "BPTWorld",
 			"location": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-parent.groovy",
 			"required": true,
