--- a/Apps/Device Sequencer/packageManifest.json
+++ b/Apps/Device Sequencer/packageManifest.json
@@ -3,6 +3,8 @@
 	"minimumHEVersion": "2.1.9",
 	"author": "BPTWorld",
 	"dateReleased": "2020-04-07",
+	"documentationLink": "https://github.com/bptworld/Hubitat",
+	"communityLink": "https://community.hubitat.com/t/release-device-sequencer/8596",
 	"apps" : [
 		{
 			"id" : "addb4010-1e41-4fd2-a84f-e9d9de86e514",
