--- a/Apps/Device Sequencer/packageManifest.json
+++ b/Apps/Device Sequencer/packageManifest.json
@@ -5,6 +5,7 @@
 	"dateReleased": "2020-04-07",
 	"documentationLink": "https://github.com/bptworld/Hubitat",
 	"communityLink": "https://community.hubitat.com/t/release-device-sequencer/8596",
+	"releaseNotes": "All release notes can be found within the Community Link and within the App/Driver code.",
 	"apps" : [
 		{
 			"id" : "addb4010-1e41-4fd2-a84f-e9d9de86e514",
